# six-shooter

./: CMakeLists.txt
src/: console_box.cpp  console_box.hpp  console_dialog.cpp  console_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  map_builder.cpp  map_builder.hpp  map_extractor.cpp  map_extractor.hpp  settings.cpp  settings.hpp  settings_editor.cpp  settings_editor.hpp  tag_bludgeoner.cpp  tag_bludgeoner.hpp  tag_tree_dialog.cpp  tag_tree_dialog.hpp  tag_tree_widget.cpp  tag_tree_widget.hpp  universal.qrc  windows.rc
